--- a/src/tceav/resources/ChangeLog.html
+++ b/src/tceav/resources/ChangeLog.html
@@ -5,6 +5,14 @@
         <title>Change Log</title>
     </head>
     <body>
+        
+        <h2>Version 6.2 Build 199</h2>
+        <h3>21 July 2012</h3>
+        <p>Fixed :</p>
+        <ol>
+            <li>Procedure Manager: Removed workflow subtask sorting as there is an incompatibility with Tc.UA 2008 exports. Sub tasks use to be re-ordered to match the flow chart, they will now appear as they do in Workflow viewer.Version 6.2 Build 199Procedure Manager: Removed workflow subtask sorting as there is an incompatibility with Tc.UA 2008 exports. Sub tasks use to be re-ordered to match the flow chart, they will now appear as they do in Workflow viewer.Version 6.2 Build 199</li>
+        </ol>
+
         <h2>Version 6.1 Build 198</h2>
         <h3>28 Jun 2012</h3>
         <p>New Features :</p>
